--- a/app/src/main/res/layout/activity_cinepolis.xml
+++ b/app/src/main/res/layout/activity_cinepolis.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/material_dynamic_primary70"
     tools:context=".cinepolis.Cinepolis">
 
     <TextView
@@ -38,8 +39,9 @@
         android:id="@+id/edtNombre"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toEndOf="@+id/nombre"
         app:layout_constraintTop_toBottomOf="@+id/cinepolis" />
 
@@ -59,7 +61,10 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/cantidad"
         app:layout_constraintTop_toBottomOf="@+id/edtNombre" />
 
@@ -75,6 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cantidad" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -94,8 +100,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No" />
-
-
     </RadioGroup>
 
     <TextView
@@ -111,33 +115,52 @@
          />
 
     <EditText
+        android:id="@+id/edtBoletos"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="28dp"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.019"
         app:layout_constraintStart_toEndOf="@id/boletos"
-        app:layout_constraintStart_toEndOf="@id/boletos"/>
+        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/boletospagar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="431dp" />
+        android:text="Total a Pagar"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_margin="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/boletos" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/precio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="506dp" />
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:text="$xxx"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/boletospagar"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="582dp" />
+        android:background="@color/material_dynamic_primary10"
+        android:onClick="calcular"
+        android:text="Calcular"
+        android:textColor="@color/white"
+        app:circularflow_radiusInDP="dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/precio" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
